# perficient-interview

./: .gitignore  ARCHITECTURE.md  README.md  meta_agent.py  pyproject.toml  vercel.json
interview-app/: .env.example  .env.local.example  .gitignore  package.json  pnpm-lock.yaml  requirements.txt
interview-app/api/_lib/: .gitignore
interview-app/src/app/: globals.css  layout.tsx  page.tsx
interview-app/src/app/api/_lib/: pipeline.ts
interview-app/src/app/api/action/: route.ts
interview-app/src/app/api/analyze/: route.ts
interview-app/src/app/api/analyze-item/: route.ts
interview-app/src/app/api/chat/: route.ts
interview-app/src/app/api/create-item/: route.ts
interview-app/src/app/api/customize/: route.ts
interview-app/src/app/api/research/: route.ts
interview-app/src/app/api/submit/: route.ts
interview-app/src/components/: ChatPanel.tsx  CustomizeInput.tsx  DynamicChart.tsx  DynamicTable.tsx  KPICard.tsx  ThemeToggle.tsx
interview-app/src/components/panels/: DashboardPanel.tsx  DocumentUploadPanel.tsx  FormPanel.tsx  PipelineResultsPanel.tsx  ResearchPanel.tsx  WorkflowPanel.tsx
interview-app/src/components/sections/: ChecklistSection.tsx  DocumentSection.tsx  FieldTableSection.tsx  KVPairsSection.tsx  ListSection.tsx  RecordMatchSection.tsx  ScoreSection.tsx  SectionRenderer.tsx  TextSection.tsx
interview-app/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  processing-indicator.tsx
interview-app/src/lib/: focus-context.ts  supabase-server.ts  types.ts
