[project]
name = "perficient"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.84.0",
    "httpx>=0.28.1",
    "langgraph>=1.1.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.2",
    "streamlit>=1.55.0",
    "supabase>=2.28.0",
]
